--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/index.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
+    "dev": "ts-node-dev --respawn --pretty --transpile-only src/index.ts"
   },
   "author": "zakria",
   "license": "ISC",
@@ -17,10 +17,9 @@
   "devDependencies": {
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.18",
-    "concurrently": "^7.6.0",
     "i": "^0.3.7",
-    "nodemon": "^2.0.20",
     "pm": "^2.2.6",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
   }
 }
