--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/index.js",
-    "dev": "ts-node-dev --respawn --pretty --transpile-only src/index.ts"
+    "dev": "ts-node-dev --respawn --pretty --transpile-only src/index.ts",
+    "format": "prettier --write \"./**/*.{ts,tsx,json}\""
   },
   "author": "zakria",
   "license": "ISC",
@@ -19,6 +20,7 @@
     "@types/node": "^18.11.18",
     "i": "^0.3.7",
     "pm": "^2.2.6",
+    "prettier": "^2.8.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
   }
