--- a/package.json
+++ b/package.json
@@ -12,12 +12,18 @@
   "author": "zakria",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.13",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.28.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.18",
+    "@types/pg": "^8.6.6",
     "i": "^0.3.7",
     "pm": "^2.2.6",
     "prettier": "^2.8.1",
