--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "express": "^4.18.2",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.28.0"
+    "sequelize": "^6.28.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.18",
     "@types/pg": "^8.6.6",
+    "@types/uuid": "^9.0.0",
     "i": "^0.3.7",
     "pm": "^2.2.6",
     "prettier": "^2.8.1",
