--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-validator": "^6.14.2",
     "pg": "^8.8.0",
     "prisma": "^4.8.0",
     "uuid": "^9.0.0"
