--- a/package.json
+++ b/package.json
@@ -13,17 +13,20 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.8.0",
-    "@types/cors": "^2.8.13",
+    "argon2": "^0.30.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
+    "jsonwebtoken": "^9.0.0",
     "pg": "^8.8.0",
     "prisma": "^4.8.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
+    "@types/jsonwebtoken": "^9.0.0",
     "@types/node": "^18.11.18",
     "@types/pg": "^8.6.6",
     "@types/uuid": "^9.0.0",
