--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "basic todo app for learning backend",
   "main": "index.js",
   "scripts": {
+    "generate": "npx prisma generate",
+    "migrate-start-only": "npx prisma migrate dev --name initial-migration --create-only",
     "build": "npx tsc",
     "start": "node dist/index.js",
-    "dev": "ts-node-dev --respawn --pretty --transpile-only src/index.ts NODE_ENV=development",
+    "dev": "npm run generate && npm run migrate-start-only && ts-node-dev --respawn --pretty --transpile-only src/index.ts",
     "format": "prettier --write \"./**/*.{ts,tsx,json}\""
   },
   "author": "zakria",
