--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,5 +23,17 @@ services:
       - POSTGRES_PASSWORD=${PGPASSWORD}
       - POSTGRES_DB=${PGDATABASE}
 
+  prisma-postgres-api:
+    stdin_open: true
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: prisma-postgres-api
+    depends_on:
+      - db
+    ports:
+      - "3000:3000"
+    restart: always
+
 volumes: 
  postgres-data:
