--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/index.js",
-    "dev2": "ts-node-dev --respawn --pretty --transpile-only src/index.ts",
-    "dev": "npx nodemon -L --exec ts-node-dev --respawn --pretty --transpile-only src/index.ts",
+    "dev": "npx nodemon -L --exec ts-node-dev -r tsconfig-paths/register --respawn --pretty --transpile-only src/index.ts",
     "format": "prettier --write \"./**/*.{ts,tsx,json}\""
   },
   "author": "zakria",
@@ -36,6 +35,7 @@
     "pm": "^2.2.6",
     "prettier": "^2.8.1",
     "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.1.2",
     "typescript": "^4.9.4"
   }
 }
