--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,6 +40,8 @@
       "@common/*": ["src/common/*"],
       "@Infrastructure": ["src/Infrastructure/index"],
       "@Infrastructure/*": ["src/Infrastructure/*"],
+      "@config": ["src/config/index"],
+      "@config/*": ["src/config/*"],
     },                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
