--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.0",
     "pg": "^8.8.0",
     "prisma": "^4.8.0",
+    "tozod": "^3.0.0",
     "uuid": "^9.0.0",
     "zod": "^3.20.2"
   },
