done with the feature

--- a/sample.env
+++ b/sample.env
@@ -17,3 +17,4 @@ DATABASE_URL="YOUR POSTGRESS URL"
 IS_VALIDATION_ENABLED="false"
 JWT_ACCESS_TOKEN_SECRET="YOUR SECRET KEY"
 JWT_EXPIRATION_TIME="YOUR EXPIRATION TIME"
+SALT_ROUNDS="YOUR SALT ROUNDS FOR HASHING"
