--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prisma": "^4.8.0",
     "tozod": "^3.0.0",
     "uuid": "^9.0.0",
+    "winston": "^3.8.2",
     "zod": "^3.20.2"
   },
   "devDependencies": {
