--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "nodemailer": "^6.9.1",
     "pg": "^8.8.0",
     "prisma": "^4.8.0",
     "tozod": "^3.0.0",
@@ -31,6 +32,7 @@
     "@types/express": "^4.17.15",
     "@types/jsonwebtoken": "^9.0.0",
     "@types/node": "^18.11.18",
+    "@types/nodemailer": "^6.4.7",
     "@types/pg": "^8.6.6",
     "@types/uuid": "^9.0.0",
     "i": "^0.3.7",
