done with events on user creation

--- a/sample.env
+++ b/sample.env
@@ -18,3 +18,5 @@ IS_VALIDATION_ENABLED="false"
 JWT_ACCESS_TOKEN_SECRET="YOUR SECRET KEY"
 JWT_EXPIRATION_TIME="YOUR EXPIRATION TIME"
 SALT_ROUNDS="YOUR SALT ROUNDS FOR HASHING"
+SLACK_TOKEN="YOUR SLACK TOKEN FOR CONNECTING TO SLACK"
+SLACK_CHANNEL_ID="YOUR SLACK CHANNEL ID TO WHICH YOU WANT TO SEND MESSAGE"
