--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.8.0",
+    "@slack/web-api": "^6.8.1",
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
